# Qalix_CLI

./: .gitignore
backend/: .coverage  .dockerignore  Dockerfile  README.md  README_tmp.html  docker-compose.yaml  main.py  pyproject.toml
backend/.github/workflows/: pipeline.yml
backend/agents/: qa_agent.py
backend/alembic/: env.py
backend/alembic/versions/: 8169d8a33fe4_initial.py  ae69c9c8180c_remove_enterprise_plan_and_set_plan_not_.py
backend/core/: config.py
backend/models/: model.py  user_model.py
backend/routes/: health_routes.py  jobs_routes.py  user_routes.py
backend/schemas/: schemas.py
backend/services/: jobs_services.py
backend/test/: conftest.py
backend/test/unit/: test_jobs.py  test_main.py  test_qa_agent.py
